; ModuleID = '/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_add_commented_lines.c'
source_filename = "/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_add_commented_lines.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@strbuf_add_commented_lines.prefix1 = internal global [3 x i8] zeroinitializer, align 1
@strbuf_add_commented_lines.prefix2 = internal global [2 x i8] zeroinitializer, align 1
@comment_line_char = common dso_local global i8 0, align 1
@.str = private unnamed_addr constant [4 x i8] c"%c \00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%c\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @strbuf_add_commented_lines(%struct.strbuf* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i8, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @strbuf_add_commented_lines.prefix1, i64 0, i64 0), align 1
  %8 = sext i8 %7 to i32
  %9 = load i8, i8* @comment_line_char, align 1
  %10 = sext i8 %9 to i32
  %11 = icmp ne i32 %8, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load i8, i8* @comment_line_char, align 1
  %14 = call i32 @xsnprintf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @strbuf_add_commented_lines.prefix1, i64 0, i64 0), i32 3, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8 signext %13)
  %15 = load i8, i8* @comment_line_char, align 1
  %16 = call i32 @xsnprintf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @strbuf_add_commented_lines.prefix2, i64 0, i64 0), i32 2, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8 signext %15)
  br label %17

17:                                               ; preds = %12, %3
  %18 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = load i64, i64* %6, align 8
  %21 = call i32 @add_lines(%struct.strbuf* %18, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @strbuf_add_commented_lines.prefix1, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @strbuf_add_commented_lines.prefix2, i64 0, i64 0), i8* %19, i64 %20)
  ret void
}

declare dso_local i32 @xsnprintf(i8*, i32, i8*, i8 signext) #1

declare dso_local i32 @add_lines(%struct.strbuf*, i8*, i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
